<resources>
    <string name="app_name">Top 10 Downloader</string>
    <string name="tv_list_record">TextView</string>
    <string name="mnu_free_apps">Free apps</string>
    <string name="mnu_paid_apps">Paid apps</string>
    <string name="mnu_songs">Songs</string>
    <string name="mnu_grp_top_10">Top 10</string>
    <string name="mnu_grp_top_25">Top 25</string>
    <string name="mnu_refresh">Refresh</string>
</resources>