<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuFree"
        android:title="@string/mnu_free_apps" />

    <item
        android:id="@+id/mnuPaid"
        android:title="@string/mnu_paid_apps" />

    <item
        android:id="@+id/mnuSongs"
        android:title="@string/mnu_songs" />

    <group
        android:id="@+id/mnu_grp_limit"
        android:checkableBehavior="single">

        <item
            android:id="@+id/mnu10"
            android:checked="true"
            android:title="@string/mnu_grp_top_10" />

        <item
            android:id="@+id/mnu25"
            android:title="@string/mnu_grp_top_25" />

    </group>

    <item
        android:id="@+id/mnuRefresh"
        android:title="@string/mnu_refresh" />

</menu>